--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div class="card">
 
       <div class="picture">
-        <img src="assets/images/image-equilibrium.jpg" alt="Preview of Equilibrium #3429 NFT">
+        <img src="assets/images/image-equilibrium.jpg" alt="Preview of Equilibrium #3429 NFT" class="default-picture">
+        <div class="overlay"></div>
+        <img src="assets/images/icon-view.svg" class="hover-picture">
       </div>
 
       <h1>Equilibrium #3429</h1>
